[package]
name = "forkcordion"
version = "0.1.0"
edition = "2021"
description = "An I/O library for multi-fork file archives"
homepage = "https://github.com/jyelloz/forkcordion"
repository = "https://github.com/jyelloz/forkcordion.git"
authors = ["Jordan Yelloz <jordan@yelloz.me>"]
keywords = [
  "applesingle",
  # "appledouble",
  # "macbinary",
  "fork",
  "rsrc",
  "resource-fork",
]
license = "MIT"

[dependencies]
derive_more = "0.99"
num_enum = "0.5"
bitvec = "1"
deku = "0.15"
four-cc = "0.1"
time = "0.3"
clio = "0.1"
console = "0.15"

[dependencies.clap]
version = "3"
features = ["std", "color", "suggestions", "derive"]
